<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.ksmpartners.ernie</groupId>
    <artifactId>ernie-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Ernie Report Generation Project</name>
    <description>A JEE application resource for generating business reports</description>
    <inceptionYear>2013</inceptionYear>
	 <organization>
	    <name>KSM Technology Partners</name>
	    <url>http://www.ksmpartners.com</url>
	  </organization>
  <developers>
    <developer>
      <id>adamcoimbra</id>
      <name>Adam Coimbra</name>
      <email>adamcoimbra@gmail.com</email>
    </developer>
	<developer>
		  <id>andrewalbrecht</id>
		  <name>Andrew Albrech</name>
		  <email>aalbrecht@ksmpartners.com</email>
    </developer>
	<developer>
		  <id>mikeharnish</id>
		  <name>Michael Harnish</name>
		  <email>mharnisht@ksmpartners.com</email>
    </developer>
  </developers>
    <properties>
        <surefire.reports.version>2.15</surefire.reports.version>
        <scala.maven.plugin.version>3.1.0</scala.maven.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.5</version>
            <scope>test</scope>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback</artifactId>
            <version>0.5</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>org.joda</groupId>
            <artifactId>joda-convert</artifactId>
            <version>1.3.1</version>
        </dependency>
   </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifest>
                                <mainClass>fully.qualified.MainClass</mainClass>
                            </manifest>
                        </archive>
			<descriptors>
				<descriptor>assembly.xml</descriptor>
			</descriptors>
       
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <inherited>true</inherited>
                    <configuration>
                        <skipTests>false</skipTests>
                        <forkMode>once</forkMode>
                        <argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.scalariform</groupId>
                    <artifactId>scalariform-maven-plugin</artifactId>
                    <version>0.1.4</version>
                    <executions>
                        <execution>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>format</goal>
                            </goals>
                            <configuration>
                                <doubleIndentClassDeclaration>true</doubleIndentClassDeclaration>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>${scala.maven.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>main-scalac</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>add-source</goal>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-scalac</id>
                            <phase>process-test-resources</phase>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <recompileMode>incremental</recompileMode>
                        <useZincServer>true</useZincServer>
                        <reportPlugins>
                            <plugin>
                                <artifactId>maven-project-info-reports-plugin</artifactId>
                                <version>2.2</version>
                            </plugin>
                            <plugin>
                                <groupId>net.alchim31.maven</groupId>
                                <artifactId>scala-maven-plugin</artifactId>
                                <version>${scala.maven.plugin.version}</version>
                                <configuration>
                                    <jvmArgs>
                                        <jvmArg>-Xms64m</jvmArg>
                                        <jvmArg>-Xmx1024m</jvmArg>
                                    </jvmArgs>
                                </configuration>
                            </plugin>
                        </reportPlugins>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.6.2.201302030002</version>
                    <configuration>
                        <destfile>${project.build.directory}/target/coverage-reports/jacoco-unit.exec</destfile>
                        <datafile>${project.build.directory}/target/coverage-reports/jacoco-unit.exec</datafile>
                    </configuration>
                    <executions>
                        <execution>
                            <id>jacoco-initialize</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>jacoco-site</id>
                            <phase>package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>ernie-engine</module>
     <module>ernie-server</module>
        <module>ernie-model</module>
        <module>ernie-util</module>
        <module>ernie-api</module>
        <module>ernie-gatling</module>
	<module>ernie-java-api</module>
    </modules>
    <repositories>
   <!-- <repository>
        <id>gatling</id>
        <releases>
            <enabled>true</enabled>
            <checksumPolicy>ignore</checksumPolicy>
        </releases>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
        <url>file://${project.basedir}/ernie-gatling/lib</url>
    </repository> !-->
<repository>
        <id>ernie</id>
        <releases>
            <enabled>true</enabled>
            <checksumPolicy>ignore</checksumPolicy>
        </releases>
        <snapshots>
            <enabled>true</enabled>
        </snapshots>
        <url>file://${project.basedir}/lib</url>
    </repository>
    </repositories>
</project>
